--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,19 @@
+################################################################################
+# patterns and files to ignore
+################################################################################
+*.sw[mnop]
+*.log*
 .DS_Store
 .cache
-*.swp
-build
-firefox/
-tests/coverage/
-gh-pages/
-karma.conf.js
-node_modules
-npm-debug.log*
 package-lock.json
+yarn.lock
+################################################################################
+# directories to ignore
+################################################################################
+**/[Bb]uild/*
+**/[Tt]mp/*
+**/node_modules/*
+################################################################################
+# exception rules
+################################################################################
+!**/*.gitkeep
